<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/actionHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="50dp"/>
    <EditText 
        android:id="@+id/actionSelfDef"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="请输入自定义动作"/>
    <Button 
        android:id="@+id/consentGiven"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/consent"/>
    <Button 
        android:id="@+id/beginCollect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/beginCollect"/>
    <Button 
        android:id="@+id/stopCollect"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/stopCollect"/>
    

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="200dp">
        
        <TextView
        android:id="@+id/showData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Data to show!" />
    </ScrollView>

</LinearLayout>
